<resources>
    <string name="app_name">Admin Van</string>
    <string name="setting">add Setting</string>
    <string name="logIn">Log In</string>
    <string name="Notification">Notifications</string>
    <string name="RequestDetail">Request Detail</string>
    <string name="amount_word">Amount</string>
    <string name="Note">Note</string>
    <string name="accept">Accept</string>
    <string name="Reject">Reject</string>
    <string name="requestType">Request Type</string>
    <string name="voucherNo">Voucher No </string>
    <string name="TotalVoucher">Total Voucher</string>
    <string name="totalDiscount">Total Discount</string>
    <string name="totalBonus">Total Bonus</string>
    <string name="process">process</string>
    <string name="itemDiscount">Item Discount</string>
    <string name="itemBonus">Item Bonus</string>
    <string name="AccountStatment">Account Statment</string>
    <string name="data_type">Data Type :</string>
    <string name="ok">OK</string>
    <string name="customerName">Customer Name</string>
    <string name="customerName_">Customer Name:</string>
    <string name="preview">Preview</string>
    <string name="transName">Trans Name</string>
    <string name="date_voucher">Date</string>
    <string name="total_balance">Total balance</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="balance">Balance</string>
    <string name="add_van_sales">Add Sales Man</string>
    <string name="add_van_sales1">Sales Man</string>
    <string name="sales_man_name">Sales Man Name </string>
    <string name="name">Name </string>
    <string name="password">Password</string>
    <string name="sales_man_no">Sales Man No</string>
    <string name="Active">DeActive User</string>
    <string name="title_activity_salesman_maps">Map</string>
    <string name="customer_log_report">Customer log report</string>
    <string name="delete">Are you sure you want to
            \n delete this entry?</string>
    <string name="SALES_MAN_ID">Sales Man ID</string>
    <string name="CUS_CODE">Customer Code</string>
    <string name="CUS_NAME">Customer Name</string>
    <string name="CHECK_IN_DATE">Check In Date</string>
    <string name="CHECK_IN_TIME">Check In Time</string>
    <string name="CHECK_OUT_DATE">Check Out Date</string>
    <string name="CHECK_OUT_TIME">Check Out Time</string>
    <string name="from_date">From </string>
    <string name="to_date">To </string>
    <string name="app_paymentType">Payment Type</string>
    <string name="voucher_number">Voucher Number</string>
    <string name="sale_man_number">Sales Man Number</string>
    <string name="remark">Remark</string>
    <string name="pay_method">Pay Method</string>
    <string name="net_sales">Net Sales</string>
    <string name="net_sales2">Net Sales</string>
    <string name="net_sales3">Net Sales</string>
    <string name="showitems">  <u>Show Items</u></string>
    <string name="items">Items</string>
    <string name="vlueoftarget">Vlue of Target</string>
    <string name="target">Target</string>
    <string name="NetsaleTarget">Netsale Target</string>
    <string name="pay_date">Pay Date</string>
    <string name="check_number">Cheque Number</string>
    <string name="payment_details_report">Payment details report</string>
    <string name="cash_report">Cash report</string>
    <string name="date">Date</string>
    <string name="Month">Month</string>
    <string name="sales">Sales</string>
    <string name="app_creditCard">Credit Card</string>
    <string name="cash_sale">Cash Sale</string>
    <string name="credit_sales">Credit Sale</string>
    <string name="total_sales">Total Sales</string>
    <string name="cash">Cash</string>
    <string name="netpayment">Net Payment</string>
    <string name="credit_value">Credit Card</string>
    <string name="total_cash">Total Cash</string>
    <string name="pay">Pay</string>
    <string name="paymentCash">payment Cash</string>
    <string name="paymentCheque">payment Cheque</string>
    <string name="export_to_pdf">Export To Pdf</string>
    <string name="itemName">Item Name</string>
    <string name="price">Price</string>
    <string name="itemNo">item No</string>
    <string name="OverflowDebtlimit">Over flow Debtlimit</string>
    <string name="limit">limit</string>
    <string name="cashDiscount">cash Discount</string>
    <string name="otherDiscount">other Discount</string>
    <string name="cheackDate">check Date</string>
    <string name="update">Update</string>
    <string name="update1">Update</string>
    <string name="ListNo">List No</string>
    <string name="ListName">List Name</string>
    <string-array name="ListType">
        <item>price by customer</item>
        <item>price only</item>
        <item>offer</item>
        
    </string-array>
    <string name="passwordSetting">Password Setting</string>
    <string name="PassowrdSetting">Passowrd Setting</string>
    <string name="voucherSerial">Voucher Serial</string>
    <string name="returnSerial">Return Serial</string>
    <string name="paymentSerial">Payment Serial</string>
    <string name="unCollectedCheques_report">Un collected cheques report</string>
    <string name="chaequeDate">Date</string>
    <string name="recivedAmount">Received Amount</string>
    <string name="PAIDAMT">Paid Amount</string>
    <string name="app_cheque">Cheque</string>
    <string name="app_bank_name">Bank Name</string>
    <string name="app_amount">Amount</string>
    <string name="app_amount2">Amount</string>
    <string name="AnalyzeCustomersAccount">Analyze Customer\'s Account</string>
    <string name="customerNo">Customer No</string>
    <string name="df">DF</string>
    <string name="cf">CF</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="totalDebit">TDebit</string>
    <string name="totalCredit">TCredit</string>
    <string name="TotalDebitF">TDebit F</string>
    <string name="TotalCreditF">TCredit F</string>
    <string name="search">Search</string>
    <string name="addAdmin">Add Admin</string>
    <string name="addAdmin1">Admin</string>
    <string name="Validity">Validity</string>
    <string name="user_no">User No</string>
    <string name="userName">User Name</string>
    <string name="log_history_report">Log History report</string>
    <string name="Payments_count">Pay_count</string>
    <string name="app_cust_name">Customer Name</string>
    <string name="app_enter_cust_code">Enter Customer Code</string>
    <string name="SearchByCustomerName">Search By Customer Name</string>
    <string name="itemReport">Items Report</string>
    <string name="getItemReport">Get Item Report</string>
    <string name="discountType">Discount Type</string>
    <string name="qty">Qty</string>
    <string name="groupno">Group No</string>
    <string name="Totaldec">Total Discount</string>
    <string name="Activedes">Activate</string>
    <string name="yes">yes</string>
    <string name="export_stock">Export stock</string>
    <string name="max_voucher">Get max voucher</string>
    <string name="make_order">Make order</string>
    <string name="password_from_admin">Password from admin</string>
    <string name="voucher_return">Split returned vouchers</string>
    <string name="more">More</string>
    <string name="no">No</string>
    <string name="Plan">Plan</string>
    <string name="Location">Location</string>
    <string name="Notifications">Notifications</string>
    <string name="CustomerAddedNotifications">Customer Added Notifications</string>
    <string name="Reports">Reports</string>
    <string name="addcustomerlocation">Add Customer Location</string>
    <string name="itemvisble">Item Visble</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="addnew">Add New</string>
    <string name="addnew_">Add New:</string>
    <string name="plan_sales">Plan Sales Man</string>
    <string name="typeOrderPlan">Type Order Plan</string>
    <string name="manual">Manual</string>
    <string name="byLocation">By Location</string>
    <string name="bySaleMan">By SaleMan</string>
    <string name="id">ID</string>
    <string name="noCustomerSelected">No Customer Selected !!!</string>
    <string name="addCustomerLocation">Add Customer Location</string>
    <string name="select_area">Select Area</string>
    <string name="itemVisible">Item Visibility</string>
    <string name="changeItemVisible">Item Visible</string>
    <string name="hide">Hide</string>
    <string name="haveDuplicateOrder">You Have Duplicate Order !!</string>
    <string name="order">Order</string>
    <string name="plans_report">Plans Report</string>
    <string name="language">language</string>
    <string name="addnew1">Add new :</string>
    <string name="clear">clear</string>
    <string name="Add1">Add</string>
    <string name="Update">Update</string>
    <string name="Orderedby">Ordered by :</string>
    <string name="Manually">Manually</string>
    <string name="Paidamount">Paid amount :</string>
    <string name="Receivedamount">Required amount :</string>
    <string name="totalqty">Total Qty:</string>
    <string name="totalqty1">Total Qty</string>
    <string name="AddSalesMen">Add Sales Men</string>
    <string name="AccountReport">Account Report</string>
    <string name="MakeOffer">Make Offer</string>
    <string name="OfferReport"> Offer Report</string>
    <string name="SalesMenLocation"> Sales Men Location</string>
    <string name="ALL">ALL</string>
    <string name="Request_qty">Request Qty</string>
    <string name="ApprovedQuantity">Approved Qty</string>
    <string name="ApprovedStatus">Approved Status</string>
    <string name="RequestReport">Request Report</string>
    <string name="selectcust">Click to Select Customer</string>
    <string name="selectcust2">All</string>
    <string name="req_num">Request Num</string>
    <string name="itemCount">Items Count</string>
    <string name="exits">Are you sure to Exit</string>
    <string name="saveSuccessfuly">Save Successfuly</string>
    <string name="locationtracker">location tracker</string>
    <string name="fillip">Fill Ip Setting</string>
    <string name="refresh">Refresh</string>
    <string name="addtraget">add traget</string>
    <string name="goalachievementrate">achievement Sale</string>
    <string name="Perceofunfulfilledgoal">Perc of unfulfilled Target</string>
    <string name="TargetReport">Target Report</string>
    <string name="week_plan"> plan based on day of week </string>
    <string name="month_plan"> plan based on Date </string>
    <string name="selectsalman">Select Saleman </string>
    <string name="filllist">fill The List with Items!!</string>
    <string name="fillthenetsaletarget"> Fill The Netsale Target </string>
    <string name="TARGET_NET_SALE">Target Net Sale</string>
    <string name="REAL_NET_SALE">Real Net Sale</string>
    <string name="PERC">achievement Perc</string>
    <string name="num_of_copy">Number Of Copy</string>
    <string name="vouchers_serial">Vouchers Serial</string>
    <string name="invoice_serial_from">invoice</string>
    <string name="return_serial_from">return</string>
    <string name="order_serial_from">order</string>
    <string name="payments_serial_from">Payments Serial</string>
    <string name="tax_calc_kind">Tax Calc Kind</string>
    <string name="exclude">Exclude</string>
    <string name="include">Include</string>
    <string name="print_method">Print Method</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wifi">Wifi</string>
    <string name="price_by_customer">Item Price By Customer</string>
    <string name="use_weight_case">Use Weight Case</string>
    <string name="flagesetting">Add Flage Setting For SalesMen</string>
    <string name="addcompanyinfo">Add Company Info</string>
    <string name="AddCommissionTarget">Add Commission Target</string>
</resources>