<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/pass_setting"
     app:showAsAction="always"
        android:title="@string/PassowrdSetting"
       />


    <item
        android:id="@+id/add_cust"
        app:showAsAction="always"
        android:visible="false"
        android:title="@string/addcustomerlocation"
      />

    <item
        android:id="@+id/itemvible"
        android:title="@string/itemvisble"
        app:showAsAction="always" />
    <item
        android:id="@+id/setting"
        android:title="@string/setting"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/flagesetting"
        android:visible="false"
        android:title="@string/flagesetting"
        app:showAsAction="always" />
    <item
        android:id="@+id/addcompanyinfo"
        android:title="@string/addcompanyinfo"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/AddCommissionTarget"

        android:visible="false"
        android:title="@string/AddCommissionTarget"
        app:showAsAction="always" />

</menu>