<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
    >

        <TextView
            android:id="@+id/customerNo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="gone"

            android:gravity="center"

            android:padding="5dp"
            android:text="@string/customerNo"
            android:textColor="@color/colorblue_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/customerName"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center"
            android:padding="5dp"

            android:text="@string/customerName"
            android:textColor="@color/colorblue_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/debit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"


            android:gravity="center"
            android:padding="5dp"
            android:text="@string/debit"
            android:textColor="@color/colorblue_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/credit"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:gravity="center"

            android:padding="5dp"

            android:text="@string/credit"
            android:textColor="@color/colorblue_dark" />

        <TextView
            android:id="@+id/df"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"


            android:gravity="center"
            android:padding="5dp"
            android:text="@string/df"
            android:textColor="@color/colorblue_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/cf"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:gravity="center"

            android:padding="5dp"

            android:text="@string/cf"
            android:textColor="@color/colorblue_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/totalDebit"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"


            android:gravity="center"
            android:padding="5dp"
            android:text="@string/totalDebit"
            android:textColor="@color/colorblue_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/totalCredit"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/totalCredit"
            android:textColor="@color/colorblue_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/TotalDebitF"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/TotalDebitF"
            android:textColor="@color/colorblue_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/TotalCreditF"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/TotalCreditF"
            android:textColor="@color/colorblue_dark"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>