<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="12dp">

    <TableRow
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="3dp"
        android:gravity="center_vertical"
        >

        <TextView
            android:id="@+id/voucherNo"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:text="Voucher"
            android:textColor="@color/new_dark_blue"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/customerName"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/customerName"
            android:textColor="@color/new_dark_blue"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/salesManName"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:text="@string/sales_man_name"
            android:textColor="@color/new_dark_blue"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/payDate"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"


            android:text="@string/pay_date"
            android:textColor="@color/new_dark_blue"
            android:textSize="12sp" />



        <TextView
            android:id="@+id/amount"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:text="@string/amount_word"
            android:textColor="@color/new_dark_blue"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/remark"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"


            android:text="@string/remark"
            android:textColor="@color/new_dark_blue"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sales"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:visibility="gone"
            android:text="@string/sales"
            android:textColor="@color/new_dark_blue"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/pay"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pay"
            android:textColor="@color/new_dark_blue"
            android:textSize="14sp" />

    </TableRow>

</LinearLayout>