<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="2dp">

    <TableRow
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/salesId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:gravity="center"
            android:padding="10dp"

            android:text="@string/SALES_MAN_ID"
            android:textColor="@color/colorblue_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/salesManName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:gravity="center"
            android:padding="10dp"

            android:text="@string/sales_man_name"
            android:textColor="@color/colorblue_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/customerCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:gravity="center"

            android:padding="10dp"

            android:text="@string/CUS_CODE"
            android:textColor="@color/colorblue_dark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/customerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:gravity="center"

            android:padding="10dp"

            android:text="@string/CUS_NAME"
            android:textColor="@color/colorblue_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/checkInD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:gravity="center"

            android:padding="10dp"

            android:text="@string/CHECK_IN_DATE"
            android:textColor="@color/colorblue_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/checkInT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:gravity="center"

            android:padding="10dp"

            android:text="@string/CHECK_IN_TIME"
            android:textColor="@color/colorblue_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/checkOutD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:gravity="center"

            android:padding="10dp"

            android:text="@string/CHECK_OUT_DATE"
            android:textColor="@color/colorblue_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/checkOutT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/CHECK_OUT_TIME"
            android:textColor="@color/colorblue_dark"
            android:textSize="12sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/colorblue_dark"
            android:textSize="12sp"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/colorblue_dark"
            android:textSize="12sp"
            android:visibility="invisible"/>
    </TableRow>

</LinearLayout>